hphp/hack/test/typecheck/array_map7.php.like_types.exp
File "array_map7.php", line 24, characters 3-32:
  array
File "array_map7.php", line 27, characters 3-34:
  _
File "array_map7.php", line 25, characters 33-45:
Invalid argument (Typing[4110])
File "array_map7.php", line 3, characters 12-17:
Expected string
File "array_map7.php", line 13, characters 9-14:
But got dynamic because it is an unenforceable type
